--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.15.0",
     "gh-pages": "^6.2.0",
+    "glob": "^11.0.1",
     "gsap": "^3.12.5",
     "jspdf": "^3.0.0",
     "lucide-react": "^0.474.0",
@@ -33,6 +34,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "sitemap": "^8.0.0",
     "styled-components": "^6.1.12",
     "swiper": "^11.1.15",
     "web-vitals": "^2.1.4"
@@ -41,7 +43,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate-sitemap": "node generate-sitemap.js"
   },
   "eslintConfig": {
     "extends": [
