--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.0",
+    "react-lazy-load": "^4.0.1",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-multi-carousel": "^2.8.5",
     "react-phone-input-2": "^2.15.1",
-    "react-router-dom": "^6.27.0",
+    "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
     "sitemap": "^8.0.0",
     "styled-components": "^6.1.12",
@@ -67,7 +69,9 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.20",
+    "cssnano": "^7.0.6",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.16",
+    "terser-webpack-plugin": "^5.3.11"
   }
 }
