--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.3",
     "cloudinary": "^2.5.1",
     "cloudinary-react": "^1.8.1",
+    "compression": "^1.8.0",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.15.0",
     "gh-pages": "^6.2.0",
