--- a/package.json
+++ b/package.json
@@ -78,6 +78,9 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
     "terser-webpack-plugin": "^5.3.11",
-    "webpack-bundle-analyzer": "^4.10.2"
+    "vite-plugin-compression": "^0.5.1",
+    "webpack": "^5.98.0",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-cli": "^6.0.1"
   }
 }
