--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
+    "react-virtualized": "^9.22.6",
     "sitemap": "^8.0.0",
     "styled-components": "^6.1.12",
     "swiper": "^11.1.15",
