--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "generate-sitemap": "node generate-sitemap.js",
-    "analyze": "react-scripts build && source-map-explorer 'build/static/js/*.js'"
+    "analyze": "react-scripts build && source-map-explorer 'build/static/js/*.js'",
+    "postbuild": "cp public/.htaccess build/.htaccess"
+
   },
   "eslintConfig": {
     "extends": [
