--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
@@ -53,7 +54,6 @@
     "generate-sitemap": "node generate-sitemap.js",
     "analyze": "react-scripts build && source-map-explorer 'build/static/js/*.js'",
     "postbuild": "cp public/.htaccess build/.htaccess"
-
   },
   "eslintConfig": {
     "extends": [
