--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "gh-pages": "^6.2.0",
     "glob": "^11.0.1",
     "gsap": "^3.12.5",
-    "jspdf": "^3.0.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.1.0",
     "lucide-react": "^0.474.0",
     "next-sitemap": "^4.2.3",
     "react": "^18.3.1",
@@ -38,7 +39,6 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
-    "react-virtualized": "^9.22.6",
     "sitemap": "^8.0.0",
     "styled-components": "^6.1.12",
     "swiper": "^11.1.15",
