--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "cloudinary": "^2.5.1",
+    "cloudinary-react": "^1.8.1",
     "compression": "^1.8.0",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.15.0",
     "gh-pages": "^6.2.0",
     "glob": "^11.0.1",
     "gsap": "^3.12.5",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^4.1.0",
+    "jspdf": "^3.0.0",
     "lucide-react": "^0.474.0",
     "next-sitemap": "^4.2.3",
     "react": "^18.3.1",
@@ -39,6 +40,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
+    "react-virtualized": "^9.22.6",
     "sitemap": "^8.0.0",
     "styled-components": "^6.1.12",
     "swiper": "^11.1.15",
