Added new changes

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -13,3 +13,7 @@ RewriteRule ^(.*)$ https://metaguise.com/$1 [L,R=301]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^ index.html [QSA,L]
+
+<IfModule mod_deflate.c>
+  AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript application/javascript application/json
+</IfModule>
