--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "glob": "^11.0.1",
     "gsap": "^3.12.5",
     "jspdf": "^3.0.0",
+    "lucide-react": "^0.574.0",
     "next-sitemap": "^4.2.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
